crates/contracts/tests/ui/non_exhaustive_external_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/non_exhaustive_external_match.rs:5:11
   |
 5 |     match scheme {
   |           ^^^^^^ pattern `_` not covered
   |
note: `cow_sdk_contracts::SigningScheme` defined here
  --> src/signature.rs
   |
   | pub enum SigningScheme {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `cow_sdk_contracts::SigningScheme`
   = note: `cow_sdk_contracts::SigningScheme` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
 9 ~         SigningScheme::PreSign => "presign",
10 ~         _ => todo!(),
   |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/non_exhaustive_external_match.rs:14:11
   |
14 |     match signature {
   |           ^^^^^^^^^ pattern `_` not covered
   |
note: `Signature` defined here
  --> src/signature.rs
   |
   | pub enum Signature {
   | ^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `Signature`
   = note: `Signature` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
17 ~         Signature::PreSign { .. } => "presign",
18 ~         _ => todo!(),
   |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/non_exhaustive_external_match.rs:22:11
   |
22 |     match scheme {
   |           ^^^^^^ pattern `_` not covered
   |
note: `cow_sdk_orderbook::SigningScheme` defined here
  --> $WORKSPACE/crates/orderbook/src/types/enums.rs
   |
   | pub enum SigningScheme {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `cow_sdk_orderbook::SigningScheme`
   = note: `cow_sdk_orderbook::SigningScheme` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
26 ~         OrderbookSigningScheme::PreSign => "presign",
27 ~         _ => todo!(),
   |
